--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
+    "@lottiefiles/dotlottie-react": "^0.15.2",
     "framer-motion": "^12.23.7",
     "next": "15.4.3",
     "react": "19.1.0",
